--- a/src/sass/layouts/nav/_nav-addition-mixin-2.sass
+++ b/src/sass/layouts/nav/_nav-addition-mixin-2.sass
@@ -2,30 +2,22 @@
 	+e('addition')
 		font-size: 0
 
-		+max(md)
-			+absolute(100%, null, null, 0)
-			padding: 5px 0 5px 15px
-			+w(100%)
-			background-color: darken($color-responsive-menu, 10%)
-			overflow: hidden
-
 		+min(md)
-			text-align: right
+			display: none
 
-		+ee('links')
-			+max(md)
-				overflow: auto
-				white-space: nowrap
+		+ee('btn')
 
-		+ee('link')
-			display: inline-block
-			margin-right: 15px
-			text-decoration: none
+			border-radius: 0
 			color: $color-white
-			font-size: 14px
+			background-color: darken($color-brand-1, 15%)
 
-			+min(md)
-				display: block
-				margin-right: 0
-				color: $color-black
-				font-size: 18px
+			&:before
+				background-color: darken($color-brand-1, 20%)
+
+			+max(md)
+				display: inline-flex
+				justify-content: center
+				align-items: center
+				font-size: 11px
+				padding: 13px 10px
+				height: 100%
