Add fonts, change greeting

--- a/src/sass/base/_fonts.sass
+++ b/src/sass/base/_fonts.sass
@@ -1,15 +1,21 @@
 // Connect fonts
-=connect-font($font, $class_name: $font, $fileType: otf)
-	@font-face
-		font-family: $font
-		src: local("#{$font}"), url(../fonts/#{$font}.#{$fileType})
+@font-face
+  font-family: 'Museo Sans 300 Light'
+  src: url('../fonts/MuseoSansCyrl-300.eot')
+  src: url('../fonts/MuseoSansCyrl-300.eot?#iefix') format("embedded-opentype"), url('../fonts/MuseoSansCyrl-300.woff') format("woff"), url('../fonts/MuseoSansCyrl-300.ttf') format("truetype")
+  font-weight: normal
+  font-style: normal
 
-	@if $class_name != null
-		.#{$class_name}
-			font-family: $font
-	@else
-		.#{$font}
-			font-family: $font
+@font-face
+  font-family: 'Museo Sans 500 Medium'
+  src: url('../fonts/MuseoSansCyrl-500.eot')
+  src: url('../fonts/MuseoSansCyrl-500.eot?#iefix') format("embedded-opentype"), url('../fonts/MuseoSansCyrl-500.woff') format("woff"), url('../fonts/MuseoSansCyrl-500.ttf') format("truetype")
+  font-weight: normal
+  font-style: normal
 
-.font-general
-	font-family: 'Roboto', sans-serif
+@font-face
+  font-family: 'Museo Sans 700 Bold'
+  src: url('../fonts/MuseoSansCyrl-700.eot')
+  src: url('../fonts/MuseoSansCyrl-700.eot?#iefix') format("embedded-opentype"), url('../fonts/MuseoSansCyrl-700.woff') format("woff"), url('../fonts/MuseoSansCyrl-700.ttf') format("truetype")
+  font-weight: normal
+  font-style: normal
