--- a/src/sass/components/button/_button.sass
+++ b/src/sass/components/button/_button.sass
@@ -7,13 +7,15 @@
 	overflow: hidden
 
 	+btn-size($btn-default-padding, $btn-default-size)
+	
 
 	border: none
 	border-radius: 0
 	
-	font-weight: bold
+	+font('b')
 	text-decoration: none
 	line-height: 1.4
+	text-transform: uppercase
 	
 	-webkit-tap-highlight-color: transparent
 	outline: none
