--- a/src/sass/base/_base.sass
+++ b/src/sass/base/_base.sass
@@ -3,8 +3,7 @@ body
 	font-size: 18px
 	font-weight: 400
 	line-height: 1.42857143
-
-	@extend .font-general !optional
+	+font('m')
 
 img
 	display: inline-block
