--- a/src/sass/pages/index/_greeting.sass
+++ b/src/sass/pages/index/_greeting.sass
@@ -1,16 +1,33 @@
 .greeting
+	+relative()
 	background-color: $color-black
 	color: $color-white
-	+padding-y(30px)
+	z-index: 1
 
-	+min(sm)
-		+padding-y(60px)
+	&:after
+		content: ""
+		+absolute(0, null, null, 0)
+		+size(100%)
+		background-image: linear-gradient( -87deg, rgb(56,124,237) 0%, rgb(30,27,83) 100%)
+		opacity: 0.3
+		z-index: 1
 
-	+min(md)
-		+padding-y(100px)
+	&__container
 
-	+min(lg)
-		+padding-y(120px)
+		+padding-y(30px)
+
+		+min(sm)
+			+padding-y(60px)
+
+		+min(md)
+			+padding-y(100px)
+
+		+min(lg)
+			+padding-y(120px)
+
+	&__content
+		+relative()
+		z-index: 2
 
 	&__subtitle
 		margin-bottom: 15px
@@ -57,3 +74,28 @@
 
 	&__place
 		font-size: 14px
+
+	&__bg
+		+min(md)
+			+absolute(0, -150px)
+
+	&__dollar
+		+min(md)
+			position: absolute
+
+			&_1
+				right: 320px
+				bottom: 40px
+				max-width: 300px
+				transform: rotate(-30deg)
+
+			&_2
+				right: 220px
+				bottom: 80px
+				max-width: 280px
+				transform: rotate(70deg)
+
+			&_3
+				right: 110px
+				bottom: -55px
+				max-width: 460px
