End twig markup for problem.twig

--- a/src/sass/components/_section.sass
+++ b/src/sass/components/_section.sass
@@ -1,3 +1,16 @@
 +b("section")
   +relative()
   +margin-y(50px)
+
+  &__title
+  	line-height: 1.1
+  	text-transform: uppercase
+  	font-weight: normal
+
+  	font-size: 25px
+
+  	+min(sm)
+  		font-size: 30px
+
+  	+min(lg)
+  		font-size: 36px
