End min(md) greeting

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -47,6 +47,9 @@
 // Section
 @import 'components/section'
 
+// Section
+@import 'components/number'
+
 
 // Navigation
 @import 'layouts/nav/nav-variables'
