--- a/src/sass/components/_section.sass
+++ b/src/sass/components/_section.sass
@@ -1,16 +1,19 @@
 +b("section")
-  +relative()
-  +margin-y(50px)
+	+relative()
+	+margin-y(50px)
 
-  &__title
-  	line-height: 1.1
-  	text-transform: uppercase
-  	font-weight: normal
+	&__title
+		margin-bottom: 30px
+		line-height: 1.1
+		text-transform: uppercase
+		font-weight: 100
+		+font('l')
 
-  	font-size: 25px
+		font-size: 25px
 
-  	+min(sm)
-  		font-size: 30px
+		+min(sm)
+			margin-bottom: 45px
+			font-size: 30px
 
-  	+min(lg)
-  		font-size: 36px
+		+min(lg)
+			font-size: 36px
