--- a/src/sass/pages/index/_greeting.sass
+++ b/src/sass/pages/index/_greeting.sass
@@ -3,6 +3,7 @@
 	background-color: $color-black
 	color: $color-white
 	z-index: 1
+	overflow: hidden
 
 	&:after
 		content: ""
@@ -11,6 +12,16 @@
 		background-image: linear-gradient( -87deg, rgb(56,124,237) 0%, rgb(30,27,83) 100%)
 		opacity: 0.3
 		z-index: 1
+
+	&:before
+		content: ""
+		+absolute(null, 0, 0)
+		+size(100%, 50px)
+		background: linear-gradient(to top,rgba(0, 0, 0, 0.75) 0,rgba(0,0,0,0) 100%)
+		z-index: 2
+
+		+min(sm)
+			height: 130px
 
 	&__container
 
