Fix sm greeting responsive

--- a/src/sass/pages/index/_greeting.sass
+++ b/src/sass/pages/index/_greeting.sass
@@ -20,7 +20,7 @@
 		background: linear-gradient(to top,rgba(0, 0, 0, 0.75) 0,rgba(0,0,0,0) 100%)
 		z-index: 2
 
-		+min(sm)
+		+min(md)
 			height: 130px
 
 	&__container
