--- a/src/sass/components/_section.sass
+++ b/src/sass/components/_section.sass
@@ -1,6 +1,9 @@
 +b("section")
 	+relative()
-	+margin-y(50px)
+	+margin-y(45px)
+
+	+min(md)
+		+margin-y(60px)
 
 	&__header
 		margin-bottom: 30px
