--- a/src/sass/components/_video.sass
+++ b/src/sass/components/_video.sass
@@ -1,7 +1,8 @@
 .video
-	font-size: 0
 	+relative()
 	height: 250px
+	overflow: hidden
+	font-size: 0
 
 	+min(sm)
 		height: 300px
@@ -15,19 +16,24 @@
 		+size(100%)
 		background-image: linear-gradient( -133deg, rgb(0,0,0) 0%, rgb(15,15,32) 100%)
 		opacity: 0.8
+		z-index: 1
 
 	&__image
 		+size(100%)
 		object-fit: cover
+		+transition()
 
 	&__button
 		+absolute(50%, null, null, 50%)
 		transform: translate(-50%, -50%)
 		+size(45px)
 		+bg('../img/video-play.png')
-
 		border: none
 		background-color: transparent
+		z-index: 2
 
 		+min(sm)
 			+size(90px)
+
+	&:hover &__image
+		transform: scale(1.2)
