--- a/src/sass/components/button/_button.sass
+++ b/src/sass/components/button/_button.sass
@@ -32,9 +32,11 @@
 	&_lg
 		+btn-size($btn-large-padding, $btn-large-size)
 
+		+min(md)
+			+btn-size(25px 45px, 16px)
+
 	&_shadow
-		&-brand-1
-			box-shadow: 0 3px 8px 1px transparentize($color-brand-1, 0.5)
+		box-shadow: 0px 16px 35px 0px rgba(0, 0, 0, 0.25)
 
 		&:hover
 			box-shadow: none
