Fix number component

--- a/src/sass/components/_number.sass
+++ b/src/sass/components/_number.sass
@@ -21,3 +21,8 @@
 
 	&__content
 		font-size: 14px
+
+	&_brand-2 &__number
+		background: linear-gradient(to bottom, rgba(36,83,235,1) 0%,rgba(125,185,232,1) 100%)
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
