--- a/src/sass/pages/index/_after.sass
+++ b/src/sass/pages/index/_after.sass
@@ -2,11 +2,15 @@
 	+relative()
 	+bg('../img/after-bg.jpg')
 	color: $color-white
+	+min(lg)
+		@media only screen
+			background-attachment: fixed
+
 	&:before
 		content: ""
 		+absolute(0, 0)
 		+size(100%, 40%)
-		background: linear-gradient(to bottom,rgba(0, 0, 0, 0.75) 0,rgba(0,0,0,0) 100%)
+		background: linear-gradient(to bottom,rgb(0, 0, 0) 0,rgba(0,0,0,0) 100%)
 
 	&__header
 		+min(lg)
