Fix year responsive

--- a/src/sass/pages/index/_year.sass
+++ b/src/sass/pages/index/_year.sass
@@ -1,6 +1,11 @@
 .year
 
+	&__image
+		+max(sm)
+			max-width: 150px
+
 	&__row
 
 		+min(sm)
+			flex-direction: row-reverse
 			align-items: center
