--- a/src/sass/pages/index/_after.sass
+++ b/src/sass/pages/index/_after.sass
@@ -26,13 +26,13 @@
 			+min(md)
 				padding-top: 200px
 		&-2
-			+padding-y(45px)
+			padding-top: 45px
 			background-color: $color-white
 			color: $color-black
 			+min(sm)
+				padding-bottom: 45px
 				display: flex
 				align-items: flex-end
-
 				&-row
 					justify-content: center
 
