--- a/src/sass/pages/index/_for-who.sass
+++ b/src/sass/pages/index/_for-who.sass
@@ -14,6 +14,11 @@
 			&:nth-child(even)
 				flex-direction: row-reverse
 
+		&-image
+			+max(sm)
+				margin-bottom: 10px
+				max-width: 150px
+
 		&-title
 			line-height: 1.1
 			text-transform: uppercase
