--- a/src/sass/pages/index/_programm.sass
+++ b/src/sass/pages/index/_programm.sass
@@ -13,6 +13,8 @@
 			font-size: 60px
 
 	&__item
+		+max(sm)
+			+offset()
 		&-subtitle
 			text-transform: uppercase
 			font-size: 24px
@@ -20,14 +22,14 @@
 			font-size: 100px
 			color: $color-brand-1
 			line-height: 1
-			margin-bottom: 20px
+			margin-bottom: 10px
 			+font('b')
 
 			+min(md)
+				margin-bottom: 20px
 				font-size: 130px
 		&-list
 			list-style: none
 
 			li
-				&:not(:last-child)
-					margin-bottom: 10px
+				+offset(10px)
