--- a/src/sass/pages/index/_soul.sass
+++ b/src/sass/pages/index/_soul.sass
@@ -18,7 +18,9 @@
 			font-size: 21px
 
 	&__subheader
+		margin-bottom: 30px
 		+min(sm)
+			margin-bottom: 45px
 			align-items: center
 		&-title
 			line-height: 1.2
