--- a/src/sass/pages/index/_reviews.sass
+++ b/src/sass/pages/index/_reviews.sass
@@ -11,3 +11,45 @@
 	&__title
 		+min(md)
 			font-size: 60px
+
+	&__carousel
+
+		&-item
+
+			+min(sm)
+				width: 80%
+				+margin-x(auto)
+
+			&-video
+				width: 100%
+				height: 180px
+				+min(sm)
+					height: 300px
+				+min(lg)
+					height: 400px
+
+		&-nav
+			display: flex
+			justify-content: space-between
+			+absolute(50%, null, null, 0)
+			transform: translateY(-50%)
+			width: 100%
+
+			.owl
+				&-prev,
+				&-next
+					+size(40px)
+					background-color: #f2f3fa
+					color: #838383
+					border-radius: 100%
+					border: none
+					+transition()
+					font-size: 20px
+					line-height: 40px
+
+					span
+						line-height: 1
+
+					&:hover
+						background-color: $color-brand-1
+						color: $color-white
