--- a/src/sass/components/form/_form.sass
+++ b/src/sass/components/form/_form.sass
@@ -33,7 +33,7 @@
 	@if $themeFormDesign == "new"
 		&__control
 			+input-default
-
+			background-color: transparent
 			border: none
 
 		&__line
@@ -59,6 +59,17 @@
 				height: 1px
 				width: 100%
 				background-color: transparentize($color-black, 0.8)
+
+		&__row_submit
+			margin-top: 30px
+
+		&_white &
+			&__row_line:before
+				background-color: transparentize($color-white, 0.7)
+			&__control
+				color: $color-white
+				+placeholder()
+					color: $color-white
 
 	@else
 		&__control
