Fix welcome responsive

--- a/src/sass/pages/index/_speaker.sass
+++ b/src/sass/pages/index/_speaker.sass
@@ -55,8 +55,11 @@
 
 		&-warning
 			margin-top: 15px
-			font-size: 21px
+			font-size: 14px
 			color: $color-white
+			
+			+min(sm)
+				font-size: 21px
 
 			+min(md)
 				margin-top: 45px
