--- a/src/sass/pages/thx/_welcome.sass
+++ b/src/sass/pages/thx/_welcome.sass
@@ -13,12 +13,15 @@
 
 	&:before
 		content: ""
-		+absolute(0, -50%)
-		+size(100%, 80%)
+		+absolute(null, 0, 0)
+		+size(100%, 415px)
 		background-image: linear-gradient( 10deg, rgb(74,56,225) 0%, rgb(34,117,241) 100%)
 		box-shadow: 0px 1px 24px 0px rgba(0, 0, 1, 0.09)
 		
-		+min(md)
+		+min(sm)
+			bottom: auto
+			height: 80%
+			right: -50%
 			top: 50px
 
 	&__title
