--- a/src/sass/components/_section.sass
+++ b/src/sass/components/_section.sass
@@ -19,10 +19,10 @@
 		font-weight: 100
 		+font('l')
 
-		font-size: 25px
+		font-size: 30px
 
 		+min(sm)
-			font-size: 30px
+			font-size: 32px
 
 		+min(lg)
 			font-size: 36px
@@ -31,7 +31,11 @@
 			+font('b')
 
 	&__subtitle
-		font-size: 20px
+		font-size: 16px
+		+min(sm)
+			font-size: 20px
+		+min(lg)
+			font-size: 22px
 
 	&__title + &__subtitle
 		margin-top: 20px
