Responsive main page

--- a/src/sass/pages/index/_greeting.sass
+++ b/src/sass/pages/index/_greeting.sass
@@ -27,6 +27,8 @@
 
 		+padding-y(30px)
 
+
+
 		+min(sm)
 			+padding-y(45px)
 
@@ -43,6 +45,9 @@
 	&__content
 		+relative()
 		z-index: 2
+
+		+max(sm)
+			z-index: 4
 
 	&__subtitle
 		margin-bottom: 15px
