--- a/src/sass/components/form/_form.sass
+++ b/src/sass/components/form/_form.sass
@@ -69,6 +69,7 @@
 				background-color: transparentize($color-black, 0.8)
 
 		&__row_submit
+			text-align: center
 			margin-top: 30px
 
 		&_white &
