--- a/src/sass/pages/index/_request.sass
+++ b/src/sass/pages/index/_request.sass
@@ -66,6 +66,11 @@
 				text-decoration: line-through
 
 		&-price
-			margin-bottom: 30px
+			margin-bottom: 15px
 			+min(sm)
 				font-size: 19px
+
+		&-warning
+			font-size: 13px
+			color: #989898
+			margin-bottom: 15px
