--- a/src/sass/components/form/_form.sass
+++ b/src/sass/components/form/_form.sass
@@ -68,9 +68,10 @@
 				width: 100%
 				background-color: transparentize($color-black, 0.8)
 
-		&__row_submit
-			text-align: center
+		&__row
 			margin-top: 30px
+			&-center
+				text-align: center
 
 		&_white &
 			&__row_line:before
