--- a/src/sass/pages/index/_request.sass
+++ b/src/sass/pages/index/_request.sass
@@ -22,6 +22,8 @@
 			+min(sm)
 				padding: 45px 30px
 				height: 100%
+			+min(lg)
+				padding-top: 65px
 		&-image
 			+absolute(0, 0)
 			+size(100%)
