--- a/src/sass/pages/index/_reviews.sass
+++ b/src/sass/pages/index/_reviews.sass
@@ -1,9 +1,20 @@
 .reviews
+	+relative()
 	+padding-y(45px)
 	+bg('../img/review-bg.jpg', 0 center)
 	color: $color-white
+	z-index: 1
+
+	&:before
+		content: ""
+		+absolute(0, 0)
+		+size(100%, 100%)
+		background: $color-black
+		opacity: 0.2
+
 	+min(sm)
 		+padding-y(70px)
+
 	+min(lg)
 		@media only screen
 			background-attachment: fixed
@@ -11,6 +22,14 @@
 	&__title
 		+min(md)
 			font-size: 60px
+
+	&__letters
+		left: 0
+		top: 45px
+		opacity: 0.06
+
+		+min(sm)
+			top: 115px
 
 	&__carousel
 
