--- a/src/sass/pages/index/_reviews.sass
+++ b/src/sass/pages/index/_reviews.sass
@@ -32,6 +32,7 @@
 			top: 115px
 
 	&__carousel
+		+padding-x(45px)
 
 		&-item
 
@@ -53,6 +54,7 @@
 			+absolute(50%, null, null, 0)
 			transform: translateY(-50%)
 			width: 100%
+			z-index: -1
 
 			.owl
 				&-prev,
